# mff_2028_2034

./: .gitignore  .pre-commit-config.yaml  .sqlfluff  README.md  mypy.ini  pyproject.toml
scripts/: clear_notebook_outputs.ps1
src/: MFF_EDA.ipynb  Modszertan.ipynb  app.py  calc_ai.ipynb  calc_bi.ipynb  co_financing.ipynb  co_financing_correct.ipynb  co_financing_correct_2026_04_14.ipynb  docling_read_opten_pdf.ipynb  fadn_modelling.ipynb  find_closest_name.ipynb  find_duplicate_functions_in_notebooks.py  generate_dataset.py  kekva_nemzeti_park.ipynb  kekva_nemzeti_park.py  new_cap_vs_current_cap.ipynb  new_cap_vs_current_cap_01.ipynb  one_legal_entity.ipynb  one_legal_entity.py  tera_allat.sql  termeleshez_kotott_tam.ipynb  todo.md  utils.py
src/mff/: fadn.py  general_allocation.py  new_cap.py  plots.py  todo.py  utils.py
src/sql/: fadn_dabis.sql  farm_size_and_name.sql
